fixed up some layout issues, added fade animations

--- a/style.css
+++ b/style.css
@@ -1,61 +1,61 @@
 * {
-    /* margin: 0px; */
-    padding: 0px;
-    box-sizing: border-box;
-    text-decoration: none;
-    color: white;
-    font-family: 'Noto Sans JP', sans-serif;
-    font-weight: 300;
+  /* margin: 0px; */
+  padding: 0px;
+  box-sizing: border-box;
+  text-decoration: none;
+  color: white;
+  font-family: "Noto Sans JP", sans-serif;
+  font-weight: 300;
 }
 
 #logo {
-    letter-spacing: 3px;
+  letter-spacing: 3px;
 }
 
 a {
-    color: white;
-    text-decoration: none;
-    font-weight: 500;
+  color: white;
+  text-decoration: none;
+  font-weight: 500;
 }
 
 a:hover {
-    color: rgb(44, 179, 190);
-    text-decoration: none;
+  color: rgb(44, 179, 190);
+  text-decoration: none;
 }
 
 .overlay {
-    width:100vw; 
-    min-height:100vh; 
-    position:absolute;
-    z-index:1;
-    background-color:rgba(0,0,0,0.7); 
-    display:none;
-    justify-content: center;
-    align-items: center;
+  width: 100vw;
+  min-height: 100vh;
+  position: fixed;
+  z-index: 1;
+  background-color: rgba(0, 0, 0, 0.7);
+  display: none;
+  justify-content: center;
+  align-items: center;
 }
 
 #banner {
-    width:100vw; 
-    height:100vh; 
-    background-image: url(images/_DSC2844.jpg); 
-    background-size: cover; 
-    background-position: center; 
-    background-repeat: no-repeat;
-    position: fixed;
+  width: 100vw;
+  height: 100vh;
+  background-image: url(images/_DSC2844.jpg);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  position: fixed;
 }
 
-.foot {
-    position:fixed;
-    width: 100vw;
-    z-index: 10000;
-    text-align:center;
-    height: 500px;
-    background: rgba(0,0,0,0.7);
-    display: flex;
-    justify-content: center; /* align horizontal */
-    right: 0;
-    left: 0;
-    margin-right: auto;
-    margin-left: auto;
-    bottom: -500px;
+.contactMeBlock {
+  position: fixed;
+  width: 100vw;
+  z-index: 10000;
+  text-align: center;
+  height: 500px;
+  background: rgba(0, 0, 0, 0.7);
+  display: flex;
+  justify-content: center; /* align horizontal */
+  right: 0;
+  left: 0;
+  margin-right: auto;
+  margin-left: auto;
+  bottom: -500px;
 }
